<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ArduinoTestingActivity!</string>
    <string name="app_name">ArduinoTesting</string>
    <string name="send">Send</string>
    <string name="command_prompt">Select a command</string>
    <string name="server_ip">Servers ip</string>
    <string name="send_ip">Send ip</string>
    <string name="clear">Clear</string>
</resources>
