<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  
  <LinearLayout 
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
    
    <EditText
        android:id="@+id/ip_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/server_ip"
        android:text="10.1.1.15"
        />
        
    <Button
        android:id="@+id/send_ip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/send_ip"
        />    
    
    <Spinner 
        android:id="@+id/command_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/command_prompt"
        />
          
    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_margin="5dp"
        />
        
    <LinearLayout
        android:id="@+id/response_container" 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    </LinearLayout>
    
  </LinearLayout>

</ScrollView>
